# FCA-Neural-Networks

./: .gitignore  .gitmodules  CMakeLists.txt  fca_algorithms.cpp  fca_algorithms.h  fcanetwork.cpp  fcanetwork.h  get_results.sh  lattice.cpp  lattice.h  main.cpp  measures.cpp  measures.h  network.cpp  network.h
datasets/: breast_cancer.txt  car_evaluation.txt  example.txt  mammographic_masses.txt  seismic_bumps.txt  titanic.txt  zoo.txt
results/: .gitignore  plot_results.py
